# mes-exos-piscine

./: BattleManager.java  ProgramItalive.java  Programboonnbuilder.java  Programbuilder.java  Programchargeràbloc.java  Programste3.java  Programstep4.java  Threshold2.c  Threshold3.c  choi-implcor.cc  hacker_news-provided_files.tar  leger.c  ste1program.java  ste2Program.java  tinylibstream-provided_files.tar  trie-provided_files.tar
80cols_grep/: 80cols.grep
alphanum/: alphanum.sh
antagonist/: CMakeLists.txt
antagonist-2028-levrai/src/: main.cc
antagonist/include/libbeaver/: beaver.hh
antagonist/libbeaver/: CMakeLists.txt
antagonist/libbeaver/include/libbeaver/: beaver.hh
antagonist/libbeaver/src/: beaver.cc  beaver_impl.cc  beaver_impl.hh
antagonist/src/: CMakeLists.txt
antagonist/src/beaver/: CMakeLists.txt  beaver.cc  beaver_impl.cc  beaver_impl.hh
antagonist/src/video_player/: CMakeLists.txt  video_player.cc  video_player.hh
antagonist/test/: CMakeLists.txt  main.cc
archiyakamon/: GameEntity.java  GameRepository.java  GameResource.java  GameService.java  Gameconverter.java  ModelConverter.java  PlayerConverter.java  PlayerEntity.java  PlayerRepository.java  PlayerService.java  YakadexEntryEntity.java  itemEntity.java
binary_cipher/: binary_cipher.h  rol_crypt.c
binary_tree_static/: Makefile  binary_tree_static.c  binary_tree_static.h
bst/: bst.h  bst_static.h
builder/: builder.cc
caste_or_cast/: Makefile  ant.cc  ant.hh  colony.cc  colony.hh  main_example.cc  nurturer.cc  nurturer.hh  provider.cc  provider.hh  queen.cc  queen.hh  worker.hh
claude_correction/: Report.java  TurnDeserializer.java
create_file_755/: create_file_755.c
cut_csv/: players.csv  with_cut.sh  with_sed.sh
dlist/: Makefile  dlist.c  dlist.h  dlist_clear.c  dlist_concat.c  dlist_get.c  dlist_init.c  dlist_insert_at.c  dlist_levenshtein.c  dlist_map_square.c  dlist_push_front.c  dlist_remove_at.c  dlist_reverse.c  dlist_size.c  dlist_split_at.c
entrainemeent_cpp_2028/hello_world/: Makefile  hello_world.cc
entrainemeent_cpp_2028/stdin_to_file/: a.out  stdin_to_file.cc  stdin_to_file.hh  stdin_to_file_example.cc
eplace/: correction.js  corrooo.js  dansstream.js  huuummm.js  indexcorrection2.js  indexpagecorr1.js  o.js  package.json  src-pages-indexstep2.js  src-utils-streamsstep2.js  vite.config.js
evalexpr/: Makefile  evalexpr
exo-piscine/: Makefile  Threshold1.c  main.c
facto_rec/: facto_rec.sh
fctptr_cmd/: a.out  cat.c  commands.c  commands.h  commands.h.gch  fctptr_cmd.c
fifo/: Makefile  fifo.c
find_ascii/: find_ascii.sh
freq_analysis/: freq_analysis.c
functional_programming/: foldr.c
generate_files/: generate_files.sh
generic_void_list/: list.c
glob_easy/: glob_easy.sh
hacker_news/: news.sed
hash_map/: hash_map.c
heap/: Makefile  add.c  create.c  pop.c  print.c
hidden_message/: hidden_message.c
httpd/: .gitignore  Makefile  config.txt
huffman/: huffman.cc  node.cc  priority_queue.cc
insertion_sort/: insertion_sort.c  insertion_sort.h
inside/: inside.sh
int_vector_hill/: int_vector_hill.c  int_vector_hill.h
io_count_words/: count_words.c
java_2028/: logging-basic.java  loggingBasics-provided_files.tar  throwback-provided_files (1).tar
levenshtein/: levenshtein.c
libzork/: CMakeLists.txt
libzork-2028/libzork/: CMakeLists.txt
libzork-2028/libzork/libzork/: CMakeLists.txt
libzork-2028/libzork/libzork/src/: exceptions.hh
libzork-2028/libzork/libzork/src/runner/: choice.cc  choice_impl.cc  choice_impl.hh  html_impl.cc  html_impl.hh  interactive.cc  runner.cc  smart.cc  smart_impl.cc  smart_impl.hh
libzork-2028/libzork/libzork/src/store/: store.cc  store_impl.cc  store_impl.hh
libzork-2028/libzork/libzork/src/story/: choice.cc  choice.hh  node.cc  node_impl.cc  node_impl.hh  story.cc  story_impl.cc  story_impl.hh
libzork-2028/libzork/libzork/src/vars/: action.cc  action_impl.cc  action_impl.hh  condition.cc  condition_impl.cc  condition_impl.hh
libzork-2028/libzork/src/: main.cc
libzork/client/: flake.nix
libzork/include/libzork/runner/: smart.hh
libzork/include/libzork/store/: store.hh
libzork/include/libzork/story/: node.hh
libzork/src/: exceptions.cc  exceptions.hh
libzork/src/runner/: choice.cc  choice.hh  choice_impl.cc  choice_impl.hh  html.cc  html_impl.cc  html_impl.hh  interactive.cc  runner.cc  smart.cc  smart_impl.cc  smart_impl.hh
libzork/src/store/: store_impl.cc  store_impl.hh
libzork/src/story/: choice.hh  node.cc  node_impl.cc  node_impl.hh  story.cc  story_impl.cc  story_impl.hh
libzork/src/vars/: action.cc  action_impl.cc  action_impl.hh  condition.cc  condition_impl.cc  condition_impl.hh
libzork/tests/: synonyms.yml
linked_list_advanced/: linked_advanced.c  list_advanced.c
look_table/: mokktable.c
malloc-aujourdhui071125/: Makefile  corruptionproof
malloc_tuto/: malloc_tuto.h
minimake/: Makefile  minimake  test_advanced.mk
my_bc/: my_bc.sh
my_round/: my_round.c
my_sleep/: my_sleep.sh
my_strtok_r/: my_strtok_r.c
null_terminated_arrays/: null_terminated_arrays.c
pairs/: pairs.h
rotx/: rotx.c
sieve_eratosthenes/: Makefile  sieve.c  sieve.h
sieve_eratosthenes_advanced/: Makefile  sieve.c
simple_fnmatch/: simple_fnmatch.c  simple_fnmatch.h
spoilers/: spoilers.c
tinylibstream/: Makefile  stdout_buffering_test.c
tinyprintf/: Makefile  test_tinyprintf
to_push_evalexpr/: Makefile
traffic_lights/: traffic_lights.c
user_ids/: user_ids.sh
variant/: variant.c
vector/: vector.c
vector_implements/: vectorcc.hh
yakamon/: .env
yakamon_corrected/: ARCHITECTURE_GUIDE.md  CHANGEMENTS.md
(+277 files in other folders)
